--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> SpaceX </title>
-    <link rel="stylesheet" type="text/css" href="css/style.css";>
+    <link rel="stylesheet" type="text/css" href="style.css";>
 </head>
 <body class="home">
     <div class="container-principal">
